<resources>
    <string name="app_name">GPS_parte2</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="conceder">Grant GPS Permission</string>
    <string name="ativar">Activate GPS</string>
    <string name="desativar">Disable GPS</string>
    <string name="iniciar">Start route</string>
    <string name="terminar">Finish route</string>
    <string name="DistanceTravelled">Distance Travelled</string>
    <string name="ElapsedTime">Elapsed Time</string>
    <string name="searchAdress">Type the address</string>
    <string name="add_permision">Please, permission required</string>
    <string name="activate_location">Please enable location</string>
    <string name="requesting">Requesting...</string>
    <string name="seconds">" seconds"</string>
    <string name="meters">" meters"</string>
</resources>
